# Distributed_SLAM

./: README.md  setup.md
catkin_ws/: .gitignore
catkin_ws/src/robot_description/: CMakeLists.txt  package.xml
catkin_ws/src/robot_description/config/: robot.rviz
catkin_ws/src/robot_description/launch/: display_robot.launch  display_robot_fixed.launch  gazebo.launch  test_gazebo.launch
catkin_ws/src/robot_description/urdf/: lidar.urdf  robot.urdf  robot_fixed.urdf  test_robot.urdf
